# ClinicalAI-Verifier_EvidencePack-

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md  RUNBOOK.md  SECURITY_AND_PHI.md  evidence_strategy_catalog.md  rule_catalog.md  rules_catalog.md
examples/evidence/: claimresponse_denied.json
examples/evidence/clinical_notes/: note_2025-08-10.txt  note_2025-08-11.json
examples/preflight/: dsfe_input.csv
samples/: claimresponse_denied.json
samples/clinical_notes/: note_2025-08-10.txt  note_2025-08-15.txt
src/: cli_common.py  runtime_support.py
src/evidence_packer/: cli.py  pipeline.py
src/evidence_packer/fetcher/: __init__.py
src/evidence_packer/handler/: __init__.py  denial_handler.py  parser.py
src/evidence_packer/llm/: __init__.py  evidence_extractor.py
src/evidence_packer/models/: __init__.py
src/evidence_packer/output/: __init__.py  packet_generator.py
src/evidence_packer/strategy/: __init__.py  evidence_mapper.py
src/preflight_validator/: __init__.py  cli.py  pipeline.py
src/preflight_validator/reports/: __init__.py  writer.py
src/preflight_validator/rules/: __init__.py  engine.py
src/preflight_validator/schemas/: __init__.py  dsfe.py
tests/: support.py  test_cli.py  test_denial_parser.py  test_evidence_extractor.py  test_evidence_packer.py  test_packet_generator.py  test_preflight_validator.py  test_strategy_mapper.py
